--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="fontawesome">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Team Phoenix</title>
 </head>
 <body>
@@ -16,7 +18,7 @@
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
           <div class="card card-signin my-5">
             <div class="card-body">
-              <div class="" style="height: 10rem; padding: 60px; margin:-21px; background-image: url(https://res.cloudinary.com/kngkay/image/upload/v1568674095/kngkay/laptop2.jpg)">
+              <div class="" style="height: 10rem; padding: 60px; margin:-13px; background-image: url(https://res.cloudinary.com/kngkay/image/upload/v1568674095/kngkay/laptop2.jpg)">
               <h5 class="card-title text-center text-uppercase text-white">Sign In</h5>
             </div>
   <br> <br>
@@ -37,7 +39,7 @@
                   <label class="custom-control-label" for="customCheck1">Remember me</label>
                 </div>
                 <div class="custom-control custom-checkbox col-md-7 mb-3" >
-                  <label style="text-align: right"><a href="http:/#/">Forget password</a></label>
+                  <label style="text-align: right"><a href="#">Forget password</a></label>
                 </div>
                </div>
                 <div class="text-center"><button class="btn btn-sm btn-dark text-uppercase" type="submit" style="width: 10rem; border-radius:20px">Log in</button></div>
@@ -50,7 +52,7 @@
                 </div>       
                   <div class="custom-control custom-checkbox col-md-6 mb-3" >
                     <input type="checkbox" class="custom-control-input" id="customCheck1">
-                    <label style="align-content: right"><a href="http:/#/">Sign up here</a></label>
+                    <label style="align-content: right"><a href="Sign.html">Sign up here</a></label>
                 </div>
               </div>
             
